--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,11 +4,11 @@
             <div class="col-lg-4 mx-auto">
                 <h2 class="text-center mb-4" style="color: white;">Ingresar</h2>
                 <div class="auto-form-wrapper">
-                    <form action="#">
+                    <form [formGroup]="loginForm" (ngSubmit)=login()>
                         <div class="form-group">
-                            <label class="label">Usuario</label>
+                            <label class="label">Correo</label>
                             <div class="input-group">
-                                <input type="email" class="form-control" placeholder="Email">
+                                <input type="email" class="form-control" formControlName="email" placeholder="Email">
                                 <div class="input-group-append">
                                     <span class="input-group-text">
                         <i class="fa fa-check-circle"></i>
@@ -19,7 +19,7 @@
                         <div class="form-group">
                             <label class="label">Contraseña</label>
                             <div class="input-group">
-                                <input type="password" class="form-control" placeholder="*********">
+                                <input type="password" class="form-control" formControlName="password" placeholder="*********">
                                 <div class="input-group-append">
                                     <span class="input-group-text">
                         <i class="fa fa-check-circle"></i>
